# tauri-plugin-custom-tabs-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
android/: build.gradle.kts  settings.gradle
android/src/main/java/: CustomTabsManager.kt  CustomTabsManagerPlugin.kt
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/tauri-app/src/: main.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: CustomTabsManagerPlugin.swift
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: may_launch_url.toml  open_custom_tab_simple.toml  post_message.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
