[package]
name = "tauri-plugin-custom-tabs-manager"
version = "0.0.0"
authors = ["DreamingCodes"]
description = ""
license = "MIT"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.65"
links = "tauri-plugin-custom-tabs-manager"
exclude = [
    "/examples",
    "/.idea",
    "/.github",
]

[dependencies]
tauri = { version = "2.0.0-beta.8" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.6", features = ["build"] }
