[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["DreamingCodes"]
license = "MIT"
license-file = "../../../LICENSE"
repository = ""
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.6", features = [] }

[dependencies]
tauri = { git = "https://github.com/simonhyll/tauri", branch = "feat/android-fixes", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-custom-tabs-manager = { path = "../../.." }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
